@@ -1,3 +1,8 @@
+2006-03-28  Bruno Haible  <bruno@clisp.org>
+
+	* msgl-iconv.c: Include iconvstring.h. Don't include <errno.h>.
+	(iconv_string): Remove function, moved to ../lib/.
+
 2006-03-19  Bruno Haible  <bruno@clisp.org>
 
 	* xgettext.h (struct callshape): New field 'xcomments'.
@@ -9,6 +14,7 @@
 	(arglist_parser_done): After calling remember_a_message, attach the
 	specified extracted comments.
 	* x-perl.c (extract_variable): Update.
+	Suggested by Behdad Esfahbod <behdad@cs.toronto.edu>.
 
 2006-03-19  Bruno Haible  <bruno@clisp.org>
 
